@@ -56,5 +56,5 @@ def create_data(context, meshes, hlod=None, hierarchy=None, boxes=None, animatio
         for mesh in meshes:
             create_mesh(context, mesh, collection)
 
-    create_animation(rig, animation, hierarchy)
-    create_animation(rig, compressed_animation, hierarchy, compressed=True)
+    create_animation(context, rig, animation, hierarchy)
+    create_animation(context, rig, compressed_animation, hierarchy, compressed=True)
