@@ -1,4 +1,6 @@
 v0.6.6
+- inform user on animation import that armature might have been hidden due to visibility channels
+- do not crash on animation import if channels reference non existing bones but inform user instead
 
 v0.6.5 (26.3.21)
 - cancel export if a mesh and a bone share the same name and mesh is not configured properly
